# vmo-pipecat-for-asterisk

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  fluent-bit.conf  otel-collector-config.yaml  pyproject.toml  tenants.example.yaml
asterisk/: Dockerfile  entrypoint.sh
asterisk/conf-templates/: ari.conf.tmpl  asterisk.conf.tmpl  cdr.conf.tmpl  extensions.conf.tmpl  pjsip.conf.tmpl  rtp.conf.tmpl
asterisk/etc/: ari.conf  cdr_custom.conf  extensions.conf  pjsip.conf  rtp.conf
tests/integration/: test_agentic_bus_flow.py  test_asterisk_to_pipecat_events.py  test_e2e_echo.py  test_e2e_full_agent_deepgram.py  test_e2e_full_agent_elevenlabs.py  test_e2e_transfer.py  test_graceful_shutdown.py  test_hot_reload_route_swap.py  test_http_server.py  test_observability.py
tests/unit/: test_actions_transfer.py  test_agentic_bus_envelope.py  test_audiosocket_router.py  test_call_identity.py  test_config_models.py  test_event_bus.py  test_pipeline_factory.py  test_tenant_resolver.py
vmo_pipecat/: __main__.py  runtime.py
vmo_pipecat/actions/: asterisk_actions.py  tool_schemas.py
vmo_pipecat/ari/: __init__.py  client.py  events.py  pool.py
vmo_pipecat/audio/: audiosocket_server.py
vmo_pipecat/bus/: __init__.py  correlation.py  envelope.py
vmo_pipecat/call/: controller.py  identity.py  lifecycle.py  metrics.py  registry.py  router.py
vmo_pipecat/config/: loader.py  models.py  store.py  watcher.py
vmo_pipecat/events/: bus.py  from_asterisk.py  nats_bus.py
vmo_pipecat/http/: server.py
vmo_pipecat/observability/: otel.py  (+4 more)
(+21 files in other folders)
