[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vmo-pipecat-for-asterisk"
version = "0.1.0"
description = "Voice AI engine for Asterisk using PipeCat — multi-tenant, SaaS-ready"
requires-python = ">=3.11"
dependencies = [
    # PipeCat — voice AI orchestration framework
    "pipecat-ai[deepgram,elevenlabs,openai,silero,aws]>=0.0.46",
    # HTTP / WebSocket
    "aiohttp>=3.9",
    "websockets>=12.0",
    # Config / validation
    "pydantic>=2.0",
    "pyyaml>=6.0",
    # Logging
    "structlog>=24.0",
    # Observability — OpenTelemetry (MELT)
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25",
    "opentelemetry-instrumentation-logging>=0.46b0",
    # Config hot-reload
    "watchdog>=4.0",
    # HTTP server
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    # VAD (webrtcvad kept for compatibility; Silero is the default in PipeCat)
    "webrtcvad>=2.0.10",
    # Audio resampling
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "anyio>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vmo_pipecat*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["vmo_pipecat"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
